# gurpschgen

./: .gitignore  Cargo.toml  README.md
dta2json/: Cargo.toml
dta2json/datafiles/: .gitignore  _x.dump  aliens.json  basic.json  human-nations.json  martial-arts.json  optbasic.json  psionics.json  spacenav.json  test.dta  test.genre  test2.dta  test2.genre  test3.dta  tl07-equipment.json  tl08-equipment.json  tl09-equipment.json  tl10-basic.json  tl10-equipment.json  tl10basic.json
dta2json/src/: adq.rs  armor.rs  categorypayload.rs  combine_lines.rs  container.rs  context.rs  damage.rs  difficultyrating.rs  equipment.rs  item.rs  locate_dta.rs  main.rs  melee.rs  parse_dta.rs  ranged.rs  rof.rs  shots.rs  skill.rs  skillroot.rs  stat.rs  verify_dta.rs  weapon.rs
gurpschgen/: Cargo.toml
gurpschgen-desktop/: Cargo.toml  Dioxus.toml
gurpschgen-desktop/src/: app.rs  chsheet.rs  genre.rs  help.rs  main.rs  root.rs  routing.rs
gurpschgen-lib/: Cargo.toml
gurpschgen-lib/src/: adq.rs  attrib.rs  ch.rs  config.rs  context.rs  damage.rs  dta.rs  edition.rs  equipment.rs  gender.rs  lib.rs  misc.rs  modifier.rs  skill.rs
gurpschgen-lib/src/adq/: quirk.rs
gurpschgen-lib/src/attrib/: st.rs
gurpschgen-lib/src/dta/: genre.rs  locate_dta.rs  read_lines.rs  verify_dta.rs
gurpschgen-lib/src/equipment/: armor.rs  item.rs  weapon.rs
gurpschgen-lib/src/equipment/item/: container.rs
gurpschgen-lib/src/misc/: approx.rs  category.rs  costly.rs  damaged.rs  leveled.rs  mod_grouped.rs  named.rs  noted.rs  skilled.rs  st_req.rs  tl.rs  typing.rs  weighed.rs
(+5 files in other folders)
